--- a/appOffline/Web.config
+++ b/appOffline/Web.config
@@ -8,4 +8,9 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
+  </system.webServer>
 </configuration>
