--- a/appOffline/Web.config
+++ b/appOffline/Web.config
@@ -10,7 +10,7 @@
   </system.web>
   <system.webServer>
     <staticContent>
-      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <!--<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />-->
     </staticContent>
   </system.webServer>
 </configuration>
